Implement dashboard view for daily activity insights

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -9,6 +9,7 @@
   <div id="container">
     <h2>Today</h2>
     <div id="list"></div>
+    <button id="openDashboard">Open Dashboard</button>
   </div>
   <script src="popup.js"></script>
 </body>
