--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -17,6 +17,7 @@
         <select id="dateSelector">
           <option value="today">Today</option>
           <option value="yesterday">Yesterday</option>
+          <option value="week">Last 7 Days</option>
         </select>
         <span id="dateDisplay"></span>
       </div>
@@ -31,6 +32,18 @@
 
     <!-- 4. Gentle Insight (Placed before details for impact) -->
     <div id="insight" class="insight-box"></div>
+
+    <!-- 5. Charts Area -->
+    <div class="charts-container" style="display: flex; gap: 20px; margin-bottom: 30px; height: 300px;">
+      <div style="flex: 1; position: relative; display: flex; flex-direction: column;">
+        <canvas id="trendChart" style="width: 100%; flex: 1;"></canvas>
+        <p style="text-align: center; font-size: 12px; color: #888; margin-top: 5px;">Daily Active vs. Passive time comparison.</p>
+      </div>
+      <div style="flex: 1; position: relative; display: flex; flex-direction: column;">
+        <canvas id="distributionChart" style="width: 100%; flex: 1;"></canvas>
+        <p style="text-align: center; font-size: 12px; color: #888; margin-top: 5px;">Top sites by total duration.</p>
+      </div>
+    </div>
 
     <!-- 3. Detailed Breakdown -->
     <div id="breakdown"></div>
