--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8" />
   <title>Focus Ledger Dashboard</title>
   <link rel="stylesheet" href="dashboard.css" />
+  <link rel="icon" href="../icons/favicon.png" />
 </head>
 <body>
   <div class="container">
     <!-- 1. Header -->
     <header>
-      <div class="header-text">
-        <h1>Focus Ledger</h1>
-        <p class="subtitle">Your attention, recorded locally.</p>
+      <div class="header-text header-centered">
+        <img src="../icons/logo1.png" alt="Focus Ledger Logo" class="logo-large">
       </div>
       <div class="controls">
         <select id="dateSelector">
@@ -20,8 +20,12 @@
           <option value="week">Last 7 Days</option>
         </select>
         <span id="dateDisplay"></span>
+        <button id="exportBtn" class="btn-export">Export to CSV</button>
+        <button id="clearBtn" class="btn-export" style="background: #fff; color: #d32f2f; border: 1px solid #d32f2f; margin-left: 5px;">Reset</button>
       </div>
     </header>
+
+    <p class="subtitle-main">Your attention, recorded locally.</p>
 
     <!-- 2. Time Summary Cards -->
     <div class="summary-cards">
@@ -34,14 +38,14 @@
     <div id="insight" class="insight-box"></div>
 
     <!-- 5. Charts Area -->
-    <div class="charts-container" style="display: flex; gap: 20px; margin-bottom: 30px; height: 300px;">
-      <div style="flex: 1; position: relative; display: flex; flex-direction: column;">
-        <canvas id="trendChart" style="width: 100%; flex: 1;"></canvas>
-        <p style="text-align: center; font-size: 12px; color: #888; margin-top: 5px;">Daily Active vs. Passive time comparison.</p>
+    <div class="charts-wrapper">
+      <div class="chart-col">
+        <canvas id="trendChart" class="chart-canvas"></canvas>
+        <p class="chart-caption">Daily Active vs. Passive time comparison.</p>
       </div>
-      <div style="flex: 1; position: relative; display: flex; flex-direction: column;">
-        <canvas id="distributionChart" style="width: 100%; flex: 1;"></canvas>
-        <p style="text-align: center; font-size: 12px; color: #888; margin-top: 5px;">Top sites by total duration.</p>
+      <div class="chart-col">
+        <canvas id="distributionChart" class="chart-canvas"></canvas>
+        <p class="chart-caption">Top sites by total duration.</p>
       </div>
     </div>
 
