--- a/popup/popup.html
+++ b/popup/popup.html
@@ -6,11 +6,18 @@
   <link rel="stylesheet" href="popup.css">
 </head>
 <body>
-  <div id="container">
-    <h2>Today</h2>
-    <div id="list"></div>
-    <button id="openDashboard">Open Dashboard</button>
-  </div>
+  <header>
+    <div class="brand">
+      <img src="../icons/favicon.png" alt="Logo">
+      <span>Focus Ledger</span>
+    </div>
+    <button id="openDashboard" class="btn-dashboard" title="Open Full Dashboard">
+      <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect><line x1="3" y1="9" x2="21" y2="9"></line><line x1="9" y1="21" x2="9" y2="9"></line></svg>
+      <span>Dashboard</span>
+    </button>
+  </header>
+  <div class="date-header">Today's Activity</div>
+  <div id="list" class="list-container"></div>
   <script src="popup.js"></script>
 </body>
 </html>
